<resources>
    <string name="app_name">Contact Manager</string>
    <string name="fab_button">Fab Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="howdy">howdy</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="check_button">Check Button</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_phone">Contact Phone.</string>
    <string name="image_cake">Image Cake</string>
    <string name="image_location">Image Location</string>
    <string name="image_contact">Image Contact</string>
    <string name="image_phone">Image Phone</string>
    <string name="image_zip">Image Zip</string>
    <string name="add_button">Add Button</string>
    <string name="mm_dd_yyy">MM/DD/YYY</string>
    <string name="fill_blank">Fill in the blank form</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_added">Contact added</string>
    <string name="edit_first_name">First name</string>
<!--    <string name="last_name">Last Name</string>-->
    <string name="phone">Phone</string>
<!--    <string name="birthday">Birthday</string>-->
    <string name="location">Location</string>
<!--    <string name="zip_code">Zip Code</string>-->
    <string name="delete_contact">Delete Contact?</string>
    <string name="request_to_delete_message">Are you sure you want to delete this contact?</string>
<!--    <string name="delete">Delete</string>-->
    <string name="decline">Decline</string>
<!--    <string name="address">Address</string>-->
</resources>