<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetails">


    <TextView
        android:id="@+id/first_name"
        android:text="@string/first_name"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name"
        android:inputType="text"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:text="@string/last_name"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_last_name"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:inputType="text"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <TextView
        android:id="@+id/phone_number"
        android:text="@string/phone_number"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <EditText
        android:id="@+id/et_phone_number"
        android:inputType="phone"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <TextView
        android:id="@+id/birthday"
        android:text="@string/birthday"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_birthday"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    <EditText
        android:id="@+id/et_birthday"
        android:inputType="date"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <TextView
        android:id="@+id/address"
        android:text="@string/address"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_address"
        app:layout_constraintTop_toBottomOf="@+id/et_birthday" />

    <EditText
        android:id="@+id/et_address"
        android:inputType="textPersonName"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/zip_code"
        android:text="@string/zip_code"
        style="@style/tv_style"
        app:layout_constraintStart_toStartOf="@+id/et_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/et_address" />

    <EditText
        android:id="@+id/et_zip_code"
        android:inputType="textPersonName"
        style="@style/contact_details_et_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zip_code" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_check"
        android:contentDescription="@string/check_button" />
</androidx.constraintlayout.widget.ConstraintLayout>