<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContact">


    <ImageView
        android:id="@+id/contact_name"
        app:srcCompat="@drawable/ic_person"
        style="@style/edit_contact_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_contact"
        />

    <EditText
        android:id="@+id/et_contact"
        style="@style/edit_contact_text_style"
        android:text=""
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/contact_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contact_name" />


    <ImageView
        android:id="@+id/contact_phone"
        app:srcCompat="@drawable/ic_phone"
        style="@style/edit_contact_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_name"
        android:contentDescription="@string/image_phone"
        />

    <EditText
        android:id="@+id/et_phone_number"
        style="@style/edit_contact_text_style"
        android:text=""
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/contact_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contact_phone" />


    <ImageView
        android:id="@+id/birthday"
        app:srcCompat="@drawable/ic_cake"
        style="@style/edit_contact_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_phone"
        android:contentDescription="@string/image_cake" />

    <EditText
        android:id="@+id/et_birthday_date"
        style="@style/edit_contact_text_style"
        android:inputType="date"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birthday"
        />


    <ImageView
        android:id="@+id/location"
        app:srcCompat="@drawable/ic_location"
        style="@style/edit_contact_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday"
        android:contentDescription="@string/image_location"
        />

    <EditText
        android:id="@+id/et_location"
        style="@style/edit_contact_text_style"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location"
        />


    <ImageView
        android:id="@+id/zip"
        style="@style/edit_contact_image_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:srcCompat="@drawable/zip_code"
        android:contentDescription="@string/image_zip" />

    <EditText
        android:id="@+id/et_zip"
        style="@style/edit_contact_text_style"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zip" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_margin="8dp"-->
<!--        app:prefixText="+234"-->
<!--        android:hint="@string/hint"-->
<!--        app:helperTextTextColor="@color/purple_700"-->
<!--        app:startIconDrawable="@drawable/ic_person"-->
<!--        app:layout_constraintTop_toBottomOf="@id/et_zip_code">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/hints"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="number"-->
<!--            />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->




</androidx.constraintlayout.widget.ConstraintLayout>